Working auth; also added retrieving uuid based on OIDC claim sub;
